Adding Analytics dashboard

--- a/force-app/main/default/pages/Assign_Trails.page
+++ b/force-app/main/default/pages/Assign_Trails.page
@@ -1,249 +1,4 @@
-<apex:page controller="AssignTrailsController" action="{!init}" showheader="false" sidebar="false" standardStylesheets="false" title="AssignTrails" >
-    <apex:slds />
-<style>
-        th {
-            width: 50%;
-        }
-        h4 {
-            font-size: 24px;
-        }
-        table {
-            font-size: 20px;
-            width: 100%;
-        }
-        .hidden {
-            display: none !important;
-        }
-    </style>
-    <article class="slds-card slds-m-around_medium">
-    <div class="slds-card__body slds-card__body_inner">
-    <div class="slds-grid">
-    <div class="slds-col slds-size_1-of-2">
-    <h2 id="message">Assign Trail</h2>
+<apex:page  showheader="false" sidebar="false" standardStylesheets="false" title="AssignTrails" >
 
-    <div class="slds-form-element">
-            <label class="slds-form-element__label" for="combobox-id-13">Select Trail</label>
-            <div class="slds-form-element__control">
-            <div class="slds-combobox_container">
-            <div class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open" aria-expanded="true" aria-haspopup="listbox" role="combobox">
-            <div class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right" role="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <div id="searchbox">  
-                <input type="text" class="slds-input slds-combobox__input slds-has-focus" id="combobox-id-13" aria-autocomplete="list" aria-controls="listbox-id-15" autoComplete="off" role="textbox" placeholder="Search..." onclick="handleBoxClick()" />
-                    <span class="slds-icon_container slds-icon-utility-search slds-input__icon slds-input__icon_right" title="description of icon when needed">
-                            <svg aria-hidden="true" class="slds-icon">
-                                <use xlink:href="{!URLFOR($Asset.SLDS, 'assets/icons/utility-sprite/svg/symbols.svg#search')}"></use>
-                            </svg>
-                            <span class="slds-assistive-text">search</span>
-                        </span>
-                    </div>  
-                    <div id="searchbox2" class="hidden">  
-                   
-                        <span class="slds-icon_container slds-icon-standard-trailhead  slds-combobox__input-entity-icon" title="description of icon when needed">
-                            <svg aria-hidden="true" class="slds-icon">
-                                <use xlink:href="{!URLFOR($Asset.SLDS, 'assets/icons/standard-sprite/svg/symbols.svg#trailhead')}"></use>
-                            </svg>
-                            <span class="slds-assistive-text">Trail</span>
-                        </span>
-                        
-                     
-                      <input type="text" class="slds-input slds-combobox__input slds-combobox__input-value slds-p-left_x-large" id="combobox-id-19" aria-controls="listbox-id-18" autoComplete="off" role="textbox" placeholder="Select an Option" readonly="" value="T-00005 (Become a Functions on Demand Rockstar)" />
-                      <button class="slds-button slds-button_icon slds-input__icon slds-input__icon_right" title="Remove selected option">
-                        <span class="slds-icon_container slds-icon-utility-close" title="description of icon when needed">
-                            <svg aria-hidden="true" class="slds-icon">
-                                <use xlink:href="{!URLFOR($Asset.SLDS, 'assets/icons/utility-sprite/svg/symbols.svg#close')}"></use>
-                            </svg>
-                            <span class="slds-assistive-text">search</span>
-                        </span>
-                        <span class="slds-assistive-text">Remove selected option</span>
-                      </button>
-                      </div>
-                    
-               
-            
-            </div>
-            <!-- List //-->
-                <div id="listbox-id-15" class="slds-dropdown slds-dropdown_length-with-icon-7 slds-dropdown_fluid hidden" role="listbox">
-                <ul class="slds-listbox slds-listbox_vertical" role="presentation">
-                <li role="presentation" class="slds-listbox__item" onclick="handleSelect()">
-                <div id="option1" class="slds-media slds-listbox__option slds-listbox__option_entity slds-listbox__option_has-meta" role="option" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <span class="slds-media__figure slds-listbox__option-icon">
-                <span class="slds-icon_container slds-icon-standard-trailhead" title="description of icon when needed">
-                    <svg aria-hidden="true" class="slds-icon">
-                        <use xlink:href="{!URLFOR($Asset.SLDS, 'assets/icons/standard-sprite/svg/symbols.svg#trailhead')}"></use>
-                    </svg>
-                    <span class="slds-assistive-text">Trail</span>
-                </span>
-                </span>
-                <span class="slds-media__body">
-                <span class="slds-listbox__option-text slds-listbox__option-text_entity">T-00005</span>
-                <span class="slds-listbox__option-meta slds-listbox__option-meta_entity">Become a Functions on Demand Rockstar • 3 Modules • 18.09.2019</span>
-                </span>
-                </div>
-                </li>
-                
-                <li role="presentation" class="slds-listbox__item">
-                <div id="option2" class="slds-media slds-listbox__option slds-listbox__option_entity slds-listbox__option_has-meta" role="option" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <span class="slds-media__figure slds-listbox__option-icon">
-                        <span class="slds-icon_container slds-icon-standard-trailhead" title="description of icon when needed">
-                                <svg aria-hidden="true" class="slds-icon">
-                                    <use xlink:href="{!URLFOR($Asset.SLDS, 'assets/icons/standard-sprite/svg/symbols.svg#trailhead')}"></use>
-                                </svg>
-                                <span class="slds-assistive-text">Trail</span>
-                            </span>
-                </span>
-                <span class="slds-media__body">
-                <span class="slds-listbox__option-text slds-listbox__option-text_entity">T-00004</span>
-                <span class="slds-listbox__option-meta slds-listbox__option-meta_entity">How Volkswagen becomes Carbon Neutral until 2050 • 2 Modules • 23.07.2019</span>
-                </span>
-                </div>
-                </li>
 
-                <li role="presentation" class="slds-listbox__item">
-                        <div id="option2" class="slds-media slds-listbox__option slds-listbox__option_entity slds-listbox__option_has-meta" role="option" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <span class="slds-media__figure slds-listbox__option-icon">
-                                <span class="slds-icon_container slds-icon-standard-trailhead" title="description of icon when needed">
-                                        <svg aria-hidden="true" class="slds-icon">
-                                            <use xlink:href="{!URLFOR($Asset.SLDS, 'assets/icons/standard-sprite/svg/symbols.svg#trailhead')}"></use>
-                                        </svg>
-                                        <span class="slds-assistive-text">Trail</span>
-                                    </span>
-                        </span>
-                        <span class="slds-media__body">
-                        <span class="slds-listbox__option-text slds-listbox__option-text_entity">T-00003</span>
-                        <span class="slds-listbox__option-meta slds-listbox__option-meta_entity">Meet the new AR Service App • 3 Modules • 16.07.2019</span>
-                        </span>
-                        </div>
-                        </li>
-                        <li role="presentation" class="slds-listbox__item">
-                                <div id="option2" class="slds-media slds-listbox__option slds-listbox__option_entity slds-listbox__option_has-meta" role="option" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                <span class="slds-media__figure slds-listbox__option-icon">
-                                        <span class="slds-icon_container slds-icon-standard-trailhead" title="description of icon when needed">
-                                                <svg aria-hidden="true" class="slds-icon">
-                                                    <use xlink:href="{!URLFOR($Asset.SLDS, 'assets/icons/standard-sprite/svg/symbols.svg#trailhead')}"></use>
-                                                </svg>
-                                                <span class="slds-assistive-text">Trail</span>
-                                            </span>
-                                </span>
-                                <span class="slds-media__body">
-                                <span class="slds-listbox__option-text slds-listbox__option-text_entity">T-00002</span>
-                                <span class="slds-listbox__option-meta slds-listbox__option-meta_entity">Collaborative Campaigns • 5 Modules • 12.07.2019</span>
-                                </span>
-                                </div>
-                                </li>
-
-                                <li role="presentation" class="slds-listbox__item">
-                                        <div id="option2" class="slds-media slds-listbox__option slds-listbox__option_entity slds-listbox__option_has-meta" role="option" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                        <span class="slds-media__figure slds-listbox__option-icon">
-                                                <span class="slds-icon_container slds-icon-standard-trailhead" title="description of icon when needed">
-                                                        <svg aria-hidden="true" class="slds-icon">
-                                                            <use xlink:href="{!URLFOR($Asset.SLDS, 'assets/icons/standard-sprite/svg/symbols.svg#trailhead')}"></use>
-                                                        </svg>
-                                                        <span class="slds-assistive-text">Trail</span>
-                                                    </span>
-                                        </span>
-                                        <span class="slds-media__body">
-                                        <span class="slds-listbox__option-text slds-listbox__option-text_entity">T-00001</span>
-                                        <span class="slds-listbox__option-meta slds-listbox__option-meta_entity">Everything about Service Leads • 4 Modules • 21.06.2019</span>
-                                        </span>
-                                        </div>
-                                        </li>
-                </ul>
-                </div>
-            
-            </div>
-            </div>
-            </div>
-            </div>
-
-        <br />
-        <br />
-        <h2 id="message">To Selected Dealers</h2>
-        <br />
-        <table name="results" id="results" data-role="table" class="slds-table">
-            <thead>
-                <tr class="slds-line-height_reset">
-                <th scope="col">Dealer Name</th>
-                <th scope="col">Trail Completion</th>
-            </tr>
-         </thead>
-            <tbody id="tbody"></tbody>
-        </table>
-        <br />
-        <button class="slds-button slds-button_brand" id="button" >Assign Trail to Dealers</button>
- 
-    </div>
-    </div>
-    </div>
-    </article>
-    
-    <script>
-        //TODO call setTrailsMandatory function
-            document.getElementById("button").addEventListener("click", () => {setTrailsMandatory();});
-            setTimeout(executeQuery, 1000);
-            var accountlist = null;
-            
-/* Executes the SAQL query and displays the resulting Dealers. Note: Account.Name and AccountId referenced below refer to the dataset field names. Update them to match your dataset fields. */                
-        function executeQuery() {
-            var query = {};
-            query.statements = "{!JSENCODE(query)}";
-            var queryObj = {query: query.statements};
-
-            var http = new XMLHttpRequest();
-      var url= "/services/data/v39.0/wave/query";
-      var params = JSON.stringify(queryObj);
-      http.open("POST", url, true);
-      http.setRequestHeader('Authorization', 'Bearer {!$Api.Session_ID}');
-      http.setRequestHeader('Content-Type', 'application/json');
-      http.send(params);
-      http.onreadystatechange=(e)=>{
-        if(http.responseText){
-            const response = JSON.parse(http.responseText)
-            accountlist = response;
-            console.log("Request sent\nresponse:",response);
-            if(http.status === 200){
-                //add queried dealers to table
-                    var record = null;
-                    var row = null;
-                    var tbody = document.getElementById("tbody");
-                    for (var i = 0; i < response.results.records.length; i++) {
-                        record = response.results.records[i];
-                        row = document.createElement("tr");
-                        row.setAttribute("class", "slds-hint-parent");
-                        row.innerHTML = '<td>' + record.Name + '</td><td>' + record.sum_Completed + '%</td>';
-                        tbody.appendChild(row);
-                    }
-                    
-            } else {
-            console.log("status is ",http.status);
-            }
-        } else {
-            console.log("no response");
-        }
-      }
-    }
-
-    //show trails
-    function handleSelect(){
-        document.getElementById("listbox-id-15").classList.add("hidden");
-        document.getElementById("searchbox").classList.add("hidden");
-        document.getElementById("searchbox2").classList.remove("hidden");
-    }
-
-    function handleBoxClick(){
-        document.getElementById("listbox-id-15").classList.remove("hidden");
-    }
-
-/* Calls the Apex controller method that creates opportunities for each account and returns the opportunity name for each account to the HTML table. */
-        function setTrailsMandatory() {
-            AssignTrailsController.assign(accountlist.results.records.length, function(result, event) {
-                console.log(result);
-                if (event.status) {
-                    //yo do smth
-                }
-                else {
-                    console.log('Error: ', event.message);
-                }
-            });
-        }
-    </script>
 </apex:page>
