--- a/force-app/main/default/layouts/Lead-AutoForce.layout-meta.xml
+++ b/force-app/main/default/layouts/Lead-AutoForce.layout-meta.xml
@@ -240,7 +240,7 @@
     <showRunAssignmentRulesCheckbox>true</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h3N000000mD6m</masterLabel>
+        <masterLabel>00h3N000000qhg6</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
