Resolved test drive perms and improved flow

--- a/force-app/main/default/aura/DPFeed/DPFeed.cmp
+++ b/force-app/main/default/aura/DPFeed/DPFeed.cmp
@@ -21,9 +21,9 @@
     <aura:attribute name="modalFiid" type="String" />
 
     <!-- Google news feeds  -->
-    <aura:attribute name="googleNewsToken" type="String" />
+    <!-- <aura:attribute name="googleNewsToken" type="String" />
     <aura:attribute name="googleNewSearchKey" type="String" />
-    <aura:attribute name="googleNewEnabled" type="String" />
+    <aura:attribute name="googleNewEnabled" type="String" /> -->
 
 
     <!-- feed filter checkbox group -->
