--- a/force-app/main/default/layouts/portal_feed_item__c-feed item Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/portal_feed_item__c-feed item Layout.layout-meta.xml
@@ -118,6 +118,10 @@
                 <behavior>Edit</behavior>
                 <field>OwnerId</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>sourceArticle__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
