--- a/force-app/main/default/aura/DPFeed/DPFeed.css
+++ b/force-app/main/default/aura/DPFeed/DPFeed.css
@@ -22,7 +22,7 @@
     border-radius: 4px;
     margin: 20px;
     margin-bottom: 30px;
-    border: 1px solid #dfe4e0;
+    /* border: 1px solid #dfe4e0; */
     /*box-shadow: 0 0 8px 1px rgba(15,34,80,.05);*/
 }
 
@@ -153,7 +153,7 @@
     z-index: 3;
     display: flex;
     flex-direction: row;
-    border-bottom: 1px solid #dfe4e0;
+    border: 1px solid #dfe4e0;
     border-radius: 0 4px;
 }
 
@@ -389,7 +389,7 @@
 
 .THIS .feed-container{
     width: 100%;
-    height: 180px;
+    height: 182px;
     display: flex;
     flex-direction: row;
 }
