--- a/force-app/main/default/layouts/Asset-Asset Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Asset-Asset Layout.layout-meta.xml
@@ -68,6 +68,10 @@
                 <behavior>Edit</behavior>
                 <field>operational__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>VIN__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
@@ -165,7 +169,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h3N000000fQQu</masterLabel>
+        <masterLabel>00h3N000000mD80</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
