--- a/force-app/main/default/aura/DPFeed/DPFeed.cmp
+++ b/force-app/main/default/aura/DPFeed/DPFeed.cmp
@@ -124,8 +124,6 @@
                             <aura:iteration items="{!v.fil}" var="fi">
                                 <!-- render feed item types of announcement, news, competitive //-->
                                 <aura:if isTrue="{!or(or(and(fi.type__c == 'announcement',v.announcement),and(fi.type__c == 'news',v.news)),and(fi.type__c == 'competitive',v.competitive))}">
-
-
                                     <c:feedItemRegular 
                                         image="{!fi.image__c}"
                                         title="{!fi.title__c}"
@@ -185,11 +183,11 @@
                                                     <aura:if isTrue="{!fi.icon_3__c}">
                                                     <span class="inlineitem"><lightning:icon iconName="{!fi.icon_3__c}" size="xx-small" /></span>
                                                     </aura:if>
-                                                    <span class="inlineitem"><a onclick="{!c.viewDetails}" data-id="{!fi.record_id_3__c}" data-record="{!fi.record_name_3__c}" data-fiid="{!fi.Id}" >{!fi.record_name_3__c}</a></span>
+                                                    <!-- <span class="inlineitem"><a onclick="{!c.viewDetails}" data-id="{!fi.record_id_3__c}" data-record="{!fi.record_name_3__c}" data-fiid="{!fi.Id}" >{!fi.record_name_3__c}</a></span>
                                                    
                                                     <aura:if isTrue="{!fi.record_name_3__c}">
                                                         <span class="inlineitem">.</span>
-                                                    </aura:if>
+                                                    </aura:if> -->
                                                 </div>
                                                 <div class="action-sla-container">
                                                     <aura:if isTrue="{!fi.SLA_active__c}">
